plugins {
    id 'org.jetbrains.intellij' version '1.13.3'
}

group 'pers.zlf'

targetCompatibility = 11

intellij {
    version = '2021.2.3'
    plugins = ['java']
    updateSinceUntilBuild = false
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.freemarker:freemarker:2.3.23'
    implementation 'com.alibaba.fastjson2:fastjson2:2.0.8'
}
